[tool.poetry]
name = "herokubot"
version = "0.1.0"
description = ""
authors = ["sidorovanton <anton.sidorov@paxful.com>"]

[tool.poetry.dependencies]
python = "^3.8"
motor = "^2.2.0"
aiogram = "^2.9.2"
fastapi = "^0.61.0"
uvicorn = "^0.11.8"
httpx = "^0.14.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5.4.2"
flake8 = "^3.8.3"
mypy = "^0.782"

[tool.isort]
profile = "black"
src_paths = ["app"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
